<resources>
    <string name="app_name">Sofra</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_slogan">التطبيق الأول لبيع وطلب الطعام</string>
    <string name="button_food_order">طلب طعام</string>
    <string name="button_food_buying">بيع طعام</string>
    <string name="reserved_text">جميع الحقوق محفوظة لدى تطبيق سفرة.</string>
    <string name="sign_in_text">تفضل بتسجيل الدخول</string>
    <string name="email">البريد الإلكترونى</string>
    <string name="password">كلمة المرور</string>
    <string name="login_text">تسجيل الدخول</string>
    <string name="forget_password">نسيت كلمة السر؟</string>
    <string name="register_button_text">إنشاء حساب جديد</string>
    <string name="restaurant_name_text">اسم المطعم</string>
    <string name="repeat_pass">إعادة كلمة المرور</string>
    <string name="continue_text">متابعة</string>
    <string name="minimum_order_text">الحد الأدنى للطلب</string>
    <string name="delivery_fee_text">رسوم التوصيل </string>
    <string name="delivery_data_text">بيانات التوصيل</string>
    <string name="phone">الجوال</string>
    <string name="whatsapp">الواتس أب</string>
    <string name="photo_text">صورة المطعم</string>
    <string name="register">تسجيل</string>
    <string name="add_picture">أضف صورة</string>
    <string name="user_name">الإسم</string>
    <string name="details">وصف السكن</string>
    <string name="next">التالى</string>
    <string name="no_internet_connection">لا يوجد انترنت</string>
    <string name="restaurent_image">صورة المطعم</string>
    <string name="restaurent_image_select">اختار صورة المطعم</string>
    <string name="city_string">المدينة</string>
    <string name="region_text">الحى</string>
    <string name="category_text">اختار الصنف</string>
    <string name="forget_password_text">نسيت كلمة السر</string>
    <string name="enter_your_email">برجاء إدخال البريد الإلكترونى</string>
    <string name="your_email_hint">البريد الإلكترونى</string>
    <string name="send_text">إرسال</string>
    <string name="enter_your_code_text">برجاء إدخال الكود المُرسل إليك</string>
    <string name="code">######</string>
    <string name="enter_new_password">أدخل كلمة المرور الجديدة</string>
    <string name="change_password_button">تغيير كلمة المرور</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="categories">الأصناف</string>
    <string name="open_now">مفتوح الأن</string>
    <string name="min_order_text">الحد الأدنى للطلب   60 ريال</string>
    <string name="delivery_fee">رسوم التوصيل   10 ريال</string>
    <string name="food_list_text">قائمة الطعام</string>
    <string name="comments_and_rating">التعليقات والتقييمات</string>
    <string name="restaurant_info_text">معلومات المتجر</string>
    <string name="food_name_text">ساندوتش برجر تركى</string>
    <string name="food_item_details">ساندوتش راب برجر محشى بقطع الدجاج  الحارة المتبلة</string>
    <string name="price_text">السعر: </string>
    <string name="price_50_text">50 ريال</string>
    <string name="date_text">التاريخ</string>
    <string name="comments_text">الكومنت</string>
    <string name="comments_share_text">يسعدنا مشاركتك بتعليق او تقييم</string>
    <string name="add_comment_button">أضف تعليق أو تقييم</string>
    <string name="rate_the_restaurant_text">قيم المطعم</string>
    <string name="comment_edit_text">أضف تعليق هنا....</string>
    <string name="add_new_comment_text">أضف تعليق</string>
    <string name="you_must_login">سجل الدخول أولا ثم أضف التعليق</string>
    <string name="status_string">الحالة</string>
    <string name="nav_home">الرئيسية</string>
    <string name="my_food">منتجاتى</string>
    <string name="my_order">طلباتى</string>
    <string name="new_offers">جديد العروض</string>
    <string name="notification">التنبيهات</string>
    <string name="commission">العمولة</string>
    <string name="about_app">عن التطبيق</string>
    <string name="conditions">الشروط والأحكام</string>
    <string name="share">شارك التطبيق</string>
    <string name="contact_us">تواصل معنا</string>
    <string name="log_out">تسجيل الخروج</string>
    <string name="order_notifications">الطلبات المقدمة</string>
    <string name="my_offers">عروضى</string>
    <string name="add_new_item_string">أضف منتج جديد</string>
    <string name="item_name_string">اسم المنتج</string>
    <string name="item_description_string">وصف مختصر</string>
    <string name="duration_time_string">مدة تجهيز الطلب</string>
    <string name="add_new_item">أضف</string>
    <string name="edit_food_item_string">تعديل</string>
    <string name="delete_food_item_string">حذف</string>
    <string name="delete">Delete</string>
    <string name="current_order_string">الطلبات الحالية</string>
    <string name="order_name_string">سلسلة مطاعم جاد</string>
    <string name="order_price_string">السعر: 100 ريال</string>
    <string name="order_delivery_cost_text">التوصيل: 10 ريال</string>
    <string name="total_price_string">الإجمالى: 110 ريال</string>
    <string name="order_number_string">رقم الطلب: 32436</string>
    <string name="order_receipt_string">استلام</string>
    <string name="order_reject_string">رفض</string>
    <string name="login_string">يرجى تسجيل الدخول أولا</string>
    <string name="login_button_text">سجل الدخول</string>
    <string name="dismiss">إلغاء</string>
    <string name="previous_order_string">طلبات سابقة</string>
    <string name="order_id_string">رقم الطلب:</string>
    <string name="total_price">الإجمالى:</string>
    <string name="something_went_error">حدث خطأ ما، يرجى إعادة المحاولة</string>
    <string name="save">حفظ</string>
    <string name="delete_confirm">هل تريد مسح العنصر?</string>
    <string name="delete_button_text">احذف</string>
    <string name="no_comments_found">لا يوجد تعليقات لهذا المطعم.</string>
    <string name="duration_text">مده تجهيز الطلب: 20 دقيقة</string>
    <string name="special_order_text">طلب خاص</string>
    <string name="add_to_cart_string">أضف إلى السلة</string>
    <string name="log_in_text">تسجيل الدخول</string>
    <string name="you_must_login_string">يجب تسجيل الدخول أولا</string>
    <string name="log_in">تسجيل الدخول</string>
    <string name="add_to_cart">تمت الإضافة إلى السلة</string>
    <string name="complete_order">تنفيد الطلب</string>
    <string name="add_more">إضافة المزيد</string>
    <string name="reyal">ريال</string>
    <string name="dummy_text">Try pressing noodles soup.</string>
    <string name="add_offer_string">إضافة عرض جديد</string>
    <string name="offer_photo_string">إضافة صورة للعرض</string>
    <string name="add_string">أضف</string>
    <string name="offer_name_string">اسم العرض</string>
    <string name="starting_from">المدة من</string>
    <string name="ending_at">المدة إلى</string>
    <string name="no_offers">لا يوجد عروض. أضف عرض جديد.</string>
</resources>
