<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checkable="true"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_my_items"
            android:checkable="true"
            android:icon="@drawable/ic_label_black_24dp"
            android:title="@string/my_order" />

        <item
            android:id="@+id/nav_notification"
            android:checkable="true"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/notification" />

        <item
            android:id="@+id/nav_commission"
            android:checkable="true"
            android:icon="@drawable/ic_calculator"
            android:title="@string/commission" />

        <item
            android:id="@+id/nav_offers"
            android:checkable="true"
            android:icon="@drawable/ic_shopping_label"
            android:title="@string/new_offers" />

        <item
            android:id="@+id/about_app"
            android:checkable="true"
            android:icon="@drawable/ic_lightbulb_outline_black_24dp"
            android:title="@string/about_app" />

        <item
            android:id="@+id/nav_conditions"
            android:checkable="true"
            android:icon="@drawable/ic_file"
            android:title="@string/conditions" />

        <item
            android:id="@+id/nav_share"
            android:checkable="true"
            android:icon="@drawable/ic_share_black_24dp"
            android:title="@string/share" />

        <item
            android:id="@+id/nav_contact_us"
            android:checkable="true"
            android:icon="@drawable/ic_email_black_24dp"
            android:title="@string/contact_us" />

        <item
            android:id="@+id/nav_log_out"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/log_out" />


    </group>



</menu>
