<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.userCycle.RestPasswordFragment">

    <TextView
        android:id="@+id/enter_your_email_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_32"
        android:gravity="center"
        android:text="@string/enter_your_code_text"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_16" />

    <EditText
        android:id="@+id/code_edit_text"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50"
        android:layout_below="@id/enter_your_email_text"
        android:layout_marginTop="@dimen/dimen_16"
        android:gravity="center"
        android:hint="@string/code" />

    <TextView
        android:id="@+id/enter_your_password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/code_edit_text"
        android:layout_marginTop="@dimen/dimen_32"
        android:gravity="center"
        android:text="@string/enter_new_password"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_16" />

    <EditText
        android:id="@+id/new_password_edit_text"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50"
        android:layout_below="@id/enter_your_password_text"
        android:layout_marginTop="@dimen/dimen_16"
        android:hint="@string/enter_new_password" />

    <EditText
        android:id="@+id/confirm_new_password_edit_text"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50"
        android:layout_below="@id/new_password_edit_text"
        android:layout_marginTop="@dimen/dimen_8"
        android:hint="@string/repeat_pass" />

    <Button
        android:id="@+id/change_password_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirm_new_password_edit_text"
        android:layout_marginStart="@dimen/dimen_8"
        android:layout_marginTop="@dimen/dimen_32"
        android:layout_marginEnd="@dimen/dimen_8"
        android:background="@color/colorGreen"
        android:text="@string/change_password_button"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_16" />


</RelativeLayout>