<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.userCycle.ForgetPasswordFragment">

    <TextView
        android:id="@+id/forget_pass_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_32"
        android:drawableEnd="@drawable/ic_person_black_24dp"
        android:drawableTint="@color/colorYellow"
        android:padding="@dimen/dimen_8"
        android:text="@string/forget_password_text"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_16"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/enter_you_email_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forget_pass_text"
        android:layout_marginTop="@dimen/dimen_32"
        android:gravity="center"
        android:text="@string/enter_your_email"
        android:textColor="@color/colorBlack" />

    <EditText
        android:id="@+id/email_edit_text"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50"
        android:layout_below="@id/enter_you_email_text"
        android:layout_marginTop="@dimen/dimen_32"
        android:hint="@string/your_email_hint" />

    <Button
        android:id="@+id/send_code_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_edit_text"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/dimen_32"
        android:layout_marginEnd="@dimen/dimen_8"
        android:background="@color/colorGreen"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_16"
        android:text="@string/send_text" />


</RelativeLayout>